--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,38 @@
-.App {
-  text-align: center;
+*{
+  margin: 0;
+  padding: 0;
+  border: 0;
+  outline: none;
+  box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body {
+  font-family: Arial, sans-serif;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.slide{
+  width: 100%;
+  height: 50vh;
+  color: #000;
+  background: linear-gradient(90deg, rgba(177,181,181,1) 0%, rgba(108,108,115,1) 35%, rgba(20,20,22,1) 100%);
+  background-size: 400% 400%;
+  position: relative;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.smart-watch{
+  display: block;
+  position: absolute;
+  width: 70%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.text-container{
+  display: inline-block;
+  width: 250px;
+  max-height: 150px; 
+  padding: 15px;
+  white-space: pre-line; 
+  word-wrap: break-word; 
+  line-height: 2.5rem;
 }
