--- a/src/components/FirstSection/FirstSection.css
+++ b/src/components/FirstSection/FirstSection.css
@@ -1,22 +1,28 @@
 .container{
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
+    position: absolute;
+    bottom: 0;
+    
+}
+.center-container{
+    display: flex;
+    justify-content: center;
 }
 .Header-section1{
     display: flex;
     flex-direction: column;
     align-items: center;
-    position: absolute;
-    bottom: 22%;
+    
+    
 }
-
 .center-botton{
-   position: absolute;
-   bottom: 10%;
-
+    padding-top: 6rem;
+    padding-bottom: 20px;
 }
+
+
 .button-smart-watch{
     color: #000;
     text-decoration: none;
@@ -39,6 +45,33 @@
     width: 600px;
     line-height: 1.5rem;
 }
+
+.slide{
+    width: 100%;
+    height: 45vh;
+    color: #000;
+    background: linear-gradient(90deg, rgba(177,181,181,1) 0%, rgba(108,108,115,1) 35%, rgba(20,20,22,1) 100%);
+    background-size: 200% 400%;
+    position: relative;
+  }
+  
+  .smart-watch{
+    display: block;
+    position: absolute;
+    width: 70%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+  
+  .text-container{
+    display: inline-block;
+    width: 250px;
+    max-height: 150px; 
+    padding: 15px;
+    white-space: pre-line; 
+    word-wrap: break-word; 
+    line-height: 2.5rem;
+  }
 
 
 
