--- a/src/components/Item/Item.css
+++ b/src/components/Item/Item.css
@@ -1,17 +1,60 @@
+.title-products{
+    text-align: center;
+    padding-bottom: 3rem;
+}
 
 
-.card-container{
+.center-contain {
     display: flex;
-    flex-direction: column;
+    justify-content: center;
     align-items: center;
-    width: 90%;
-    max-width: 500px;
-    margin: 20px auto;
-    padding-top: 25rem;
-}
-
-.card-container img{
-    width: 100%;
-    display: block;
     
-}
+    
+  }
+  
+  .card-container {
+    background-color: #dddada69;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    border-radius: 8px;
+    width: 300px;
+    padding: 20px;
+    text-align: center;
+  }
+  
+  .header {
+    border-bottom: 1px solid #ccc;
+    padding-bottom: 10px;
+    margin-bottom: 10px;
+  }
+  
+  .item-name {
+    font-size: 24px;
+    color: #333;
+  }
+  
+  .item-img {
+    max-width: 100%;
+    height: 260px;
+    margin-bottom: 20px;
+  }
+  
+  .info {
+    font-size: 16px;
+    color: #777;
+    margin-bottom: 10px;
+  }
+  
+  .btn-viewDetails {
+    background-color: #000;
+    color: #fff;
+    border: none;
+    padding: 10px 20px;
+    cursor: pointer;
+    font-size: 16px;
+    border-radius: 4px;
+    transition: background-color 0.3s;
+  }
+  
+  .btn-viewDetails:hover {
+    background-color: #000000c7;
+  }
