--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -2,7 +2,9 @@
 
 
 .navbar {
-    background-color: transparent;
+    background: transparent;
+    /* background-size: 400% 400%;
+  position: relative; */
     color: #000;
     display: flex;
     justify-content: space-between;
