--- a/src/components/steelheets/Producto.css
+++ b/src/components/steelheets/Producto.css
@@ -1,6 +1,7 @@
 .title-products{
     text-align: center;
     padding-bottom: 3rem;
+    
 }
 
 
@@ -14,12 +15,23 @@
   }
   
   .card-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     background-color: #dddada69;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    border-radius: 8px;
+
+    border-radius: 12px;
     width: 300px;
     padding: 20px;
     text-align: center;
+    margin-top: 2rem;
+   
+    border: 1px solid transparent; 
+    transition: border-color 0.3s; 
+  }
+  .card-container:hover{
+    border-color: #000;
   }
   
   .header {
@@ -31,10 +43,11 @@
   .item-name {
     font-size: 24px;
     color: #333;
+    white-space: nowrap;
   }
   
   .item-img {
-    max-width: 100%;
+    
     height: 260px;
     margin-bottom: 20px;
   }
@@ -46,16 +59,62 @@
   }
   
   .btn-viewDetails {
-    background-color: #000;
-    color: #fff;
+    
     border: none;
-    padding: 10px 20px;
+    padding: 0.5rem ;
     cursor: pointer;
-    font-size: 16px;
-    border-radius: 4px;
-    transition: background-color 0.3s;
+    display: flex;
+    align-items: center;
+    background-color: hsl(240, 2%, 26%, 0.7);
+    border-radius: 1.75rem;
+    backdrop-filter: blur(5px);
+    -webkit-backdrop-filter: blur(5px);
+    position: relative; 
   }
   
-  .btn-viewDetails:hover {
-    background-color: #000000c7;
+
+
+
+.btn-viewDetails.clicked:after {
+    content: "";
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 80px;
+    height: 80px;
+    background: rgba(255, 255, 255, 0.5);
+    border-radius: 50%;
+    transform: translate(-50%, -50%) scale(0.1);
+    animation: pulse 1s ease-out;
+}
+
+@keyframes pulse {
+    0% {
+        transform: translate(-50%, -50%) scale(0.1);
+    }
+    100% {
+        transform: translate(-50%, -50%) scale(1);
+        opacity: 0;
+    }
+}
+  .icon{
+    display: flex;
+    justify-content: center;
+    width: 2.5rem;
+    height: 2.5rem;
+    background: #333;
+    border-radius: 50%;
+    opacity: 0.8;
   }
+  .plus-icon{
+    
+    width: 20px;
+  }
+  
+  .text{
+    font-size: 14px;
+    color: #f5f5f7;
+    margin: 0 1.2rem;
+    white-space: nowrap;
+  }
+ 
