--- a/src/components/steelheets/FirstSection.css
+++ b/src/components/steelheets/FirstSection.css
@@ -1,79 +1,135 @@
-
-.container{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    position: absolute;
-    bottom: 0;
-    
-}
-
-.center-container{
-    display: flex;
-    justify-content: center;
-}
-.Header-section1{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    
-    
-}
-.center-botton{
-    padding-top: 6rem;
-    padding-bottom: 20px;
-}
-
-
-.button-smart-watch{
-    color: #000;
-    text-decoration: none;
-    border: 2px solid;
-    border-radius: 0.25rem; /* Esto es equivalente a "rounded" en Tailwind */
-    font-weight: 500; /* Esto es equivalente a "font-medium" en Tailwind */
-    padding: 0.5rem 1.5rem; /* Esto es equivalente a "px-6 py-2" en Tailwind */
-    display: inline-block; /* Esto es equivalente a "inline-block" en Tailwind */
-    transition-property: background-color, color;
-    transition-duration: 0.3s;
-}
-.button-smart-watch:hover{
-    background-color: #000;
+section{
+    padding: 70px 14% 60px;
     color: #fff;
 }
-.h2-watch{
-    padding: 1rem 0;
-}
-.txt{
-    width: 600px;
-    line-height: 1.5rem;
-}
-
-.slide{
-    width: 100%;
-    height: 45vh;
-    color: #000;
-    background: linear-gradient(90deg, rgba(177,181,181,1) 0%, rgba(108,108,115,1) 35%, rgba(20,20,22,1) 100%);
-    background-size: 200% 400%;
+  .home{
     position: relative;
+    height: 100vh;
+    width: 100%;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    align-items: center;
+    gap: 2rem;
   }
-  
-  .smart-watch{
-    display: block;
-    position: absolute;
-    width: 70%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-  }
-  
-  .text-container{
+ .home-img{
+    width: 100%;
+    height: auto;
+ }
+ img{
+    width: 100%;
+ }
+ .home-text h1{
+    font-size: 3rem;
+    font-weight: 700;
+    line-height: 1.3;
+    margin-bottom: 3rem ;
+ }
+ span{
+    color: #e73f77;
+ }
+
+ .btn{
     display: inline-block;
-    width: 250px;
-    max-height: 150px; 
-    padding: 15px;
-    white-space: pre-line; 
-    word-wrap: break-word; 
-    line-height: 2.5rem;
-  }
+    padding: 15px 35px;
+    font-size: 18px;
+    font-weight: 500;
+    letter-spacing: 1px;
+    border-radius: 3rem;
+    background-color: #333;
+    color: rgb(231, 63, 119);
+    transition: all .5s ease;
+    text-decoration: none;
+ }
+
+ .btn i {
+    vertical-align: middle;
+    margin-left: 9px;
+    font-size: 22px;
+ }
+ .btn:hover{
+background-color: rgb(231, 63, 119);
+color: #333;
+box-shadow: #f70eb1 0px 1px 25px;
+ }
+ .btn2{
+    display: inline-block;
+    margin-left: 30px;
+    font-size: 18px ;
+    font-weight: 500;
+    letter-spacing: 1px;
+    border-bottom: 3px solid rgb(231, 63, 119) ;
+    color: rgb(231, 63, 119);
+    transition: all .5s ease;
+    text-decoration: none;
+ }
+
+ .btn2:hover{
+    transform: scale(1.1) translateX(12px);
+ }
+
+
+ @media screen and (max-width: 1350px){
+   .btn{
+      
+      
+      font-size: 15px;
+     
+   }
+   .btn2{
+      font-size: 16px;
+   }
+   
+
+ }
+ @media screen and (max-width: 1147px){
+   .btn{
+      font-size: 13px;
+      
+
+ }
+ .btn2{
+   font-size: 13px;
+ }
+}
+ @media screen and (max-width: 1045px){
+    .home-img img{
+      width: 100%;
+      max-width: 490px;
+      height: auto;
+    }
+    .home{
+      height: 70vh;
+    }
+    .btn2{
+      margin-top: 1rem;
+      font-size: 18px;
+    }
+    .container-btn{
+      display: block;
+   }
+   .btn{
+      font-size: 18px;
+   }
+    }
+
+ @media screen and (max-width: 850px) {
+    .home{
+        grid-template-columns: 1fr;
+        height: 100vh;
+    }
+    .home-text{
+        padding-top: 60px;
+    }
+    .home-img{
+        text-align: center;
+    }
+    
+ }
+ @media screen and (max-width: 320px){
+   .home{
+      height: 140vh;
+   }
+ }
 
 
 
