--- a/src/components/steelheets/ProductsDetails.css
+++ b/src/components/steelheets/ProductsDetails.css
@@ -4,7 +4,7 @@
 }
 .product-card {
     display: flex;
-    background-color: #ffffff;
+    background-color: #222;
     border: 1px solid #ddd;
     border-radius: 8px;
     padding: 16px;
@@ -12,6 +12,8 @@
     line-height: 2rem;
     width: 70%;
     height: 500px;
+    align-items: center;
+    color: #fff;
   }
   
   .product-image {
@@ -44,6 +46,7 @@
   }
   .list-specificaion{
     margin-top: 2rem;
+    
   }
   
   .description-details {
@@ -114,3 +117,67 @@
 .dicount-button:hover{
     background-color: #777;
 }
+.circle-button {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    width: 60px;
+    height: 60px;
+    background-color: #333;
+    border-radius: 50%;
+    color: #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    z-index: 999;
+  }
+  
+  .circle-button:hover {
+    background-color: #444;
+  }
+  .mini-card-modal {
+    position: fixed;
+    bottom: 100px;
+    right: 100px;
+    width: 200px; /* Tamaño deseado de la mini tarjeta */
+    background-color: #fff;
+    border: 1px solid #ddd;
+    border-radius: 8px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    padding: 16px;
+    display: none; /* Inicialmente oculto */
+    z-index: 999;
+  }
+  
+  .mini-card-modal.active {
+    display: block; /* Se muestra cuando tiene la clase "active" */
+  }
+  .close-mini-card-modal {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    cursor: pointer;
+    font-size: 1.5rem;
+    color: #777;
+  }
+  
+  .close-mini-card-modal:hover {
+    color: #333;
+  }
+  .gift{
+    width: 50px;
+  }
+
+@media (max-width: 768px) {
+    .product-card {
+      width: 90%; /* Adjusted width for tablet devices */
+    }
+  }
+  
+  @media (max-width: 576px) {
+    .product-card {
+      width: 100%; /* Adjusted width for mobile devices */
+    }
+  }
