--- a/src/components/steelheets/FourSection.css
+++ b/src/components/steelheets/FourSection.css
@@ -21,6 +21,7 @@
 }
 
 .row{
+    overflow: hidden;
     position: relative;
     padding: 10px 35px 40px;
     background-color: #212121;
@@ -38,8 +39,10 @@
 .row img{
     width: 100%;
     height: 350px;
-    transition: transform .5s ease;
+    
     cursor: pointer;
+    transition: transform 900ms;
+    object-fit: cover;
    
 }
 .row h3{
@@ -102,7 +105,7 @@
 }
 
 .row img:hover{
-    transform: scale(1.1);
+    transform: scale(1.2);
 }
 
 @media screen and (max-width: 768px) {
