--- a/src/components/steelheets/Form.css
+++ b/src/components/steelheets/Form.css
@@ -25,7 +25,7 @@
     text-align: center;
     max-width: 28rem;
     width: 28rem;
-   height: 430px;
+   height: 510px;
   
    color: #fff;
 }
@@ -83,11 +83,8 @@ input{
     display: flex;
     
 }
-.icon-email{
-    font-size: 20px;
-    padding-right: 10px;
-}
-.icon-password{
+
+.icon-password, .icon-email, .icon-phone, .icon-user{
     font-size: 20px;
     padding-right: 10px;
 }
